styles.css
@font-face {
  font-family: "Chivo Mono";
  font-weight: 300;
  src: url("./fonts/ChivoMono-VariableFont_wght.ttf");
}

/* Temporary solution to center calculator on page */
body {
  height: 100vh;
  width: 100vw;
  background-color: rgb(18, 18, 18);
  display: flex;
  justify-content: center;
  align-items: center;
}

#calculator,
#display-area {
  border-color: rgb(255, 255, 255, 0.2);
  border-style: solid;
}

/* Contains #display-area and #keypad-area */
#calculator {
  height: 400px;
  width: 300px;
  border-radius: 4px;
  border-width: 4px;
  background-color: rgba(255, 255, 255, 0.05);
  flex: none; /* Don't squish calculator if window is too small */
  display: flex;
  flex-direction: column;
}

#display-area,
#keypad-area {
  padding: 4px;
}

#display-area {
  border-width: 0px 0px 4px 0px;
  font-family: "Chivo Mono", ui-monospace;
  text-align: right;
  color: white;
  flex: 1; /* 1/8x the height of #keypad-area */
}

/* Display text */
#display {
  font-size: 48px;
  /* overflow: hidden;
  text-overflow: ellipsis;
  direction: rtl;
  white-space: nowrap; Requirement of text-overflow */
  /* overflow-x: scroll; */
  user-select: all;
}

#keypad-area {
  flex: 8; /* 8x the height of #display-area */
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  gap: 3px;
}

#keypad-area div {
  flex: 1;
  display: flex;
  justify-content: space-evenly;
  gap: 3px;
}

button {
  width: 100%; /* Otherwise buttons will not fill the horizontal space */
  border: 3px outset;
  border-radius: 4px 4px;
  font-family: "Chivo Mono", ui-monospace;
  font-size: 24px;
  cursor: pointer;
}

.clear {
  background-color: rgb(228, 183, 183);
  border-color: rgb(198, 153, 153);
}

.operator {
  background-color: rgb(183, 228, 183);
  border-color: rgb(153, 198, 153);
}

.number {
  background-color: rgb(183, 183, 183);
  border-color: rgb(153, 153, 153);
}

.modifier {
  background-color: rgb(223, 223, 223);
  border-color: rgb(193, 193, 193);
}

#equals {
  background-color: rgb(143, 188, 143);
  border-color: rgb(113, 158, 113);
}

